fixed failing tests for showing names in shifttrades

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -283,6 +283,6 @@
 }
 
 .shift-trade-swap-detail-agent-name {
-	width: 150px;
+	
 	height: 30px;
 }
